# tinyml

./: .gitignore  AGENTS.md  Agent.md  CMakeLists.txt  model.md  readme.md
docs/: arch.md  backend_design.html  cpu_attention_explained.html  cpu_backend_design.html  cpu_backend_design.md  design.html  llama_inference_memory_flow.html  safetensors_config_loader_design.html  tensor_view_design.html  tokenized_inference_smoke_design.html
infer/include/tinyinfer/: backend.h  core.h  llama.h  model_loader.h
infer/src/: core.cc  cpu_backend.cc  llama.cc  metal_backend.mm  model_loader.cc
ref/: pyproject.toml  tiny_llama.py
reference/: pyproject.toml  tiny_llama.py
scripts/: run_tokenized_smoke.py  test_ref.sh  test_reference.sh  tinyinfer  tinyinfer_prompt.py
tests/: test_minimal_parity_harness.py  test_tiny_llama.py
tests/cpp/: load_checkpoint_smoke.cc  run_token_ids_smoke.cc  test_core.cc
tools/: compare_demo_result.py  download_tinyllama.py  export_demo_case.py
